test/ui/name-resolution/sequence-literals-unsupported.lushui
use extern.core.(
    list.List,
    nat32.Nat32,
    text.Text,
)

construct: List = List.(1, 3, 100, Nat32.0)

bottom: bottom = bottom

destruct: bottom =
    case bottom of
        (let x, let y, Text."X") => bottom
        let _ => bottom
